--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="./reset.css">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>cnode</title>
+    <title>CNode：Node.js专业中文社区</title>
   </head>
   <body>
     <noscript>
